ahora el archivo index tiene cambios

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <h2>Esto esta brutal, muchas gracias</h2>
 </body>
 </html>
