Vamos a Hacerlo bien

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Esto esta brutal, muchas gracias</h2>
+    <h1> Hola Hermosa</h1>
+    <ul>
+        <li>Uno</li>
+        <li>Dos</li>
+    </ul>
 </body>
 </html>
